--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Wei He / Personal Website"
 title_separator          : "-"
 name                     : &name "Wei He"
 description              : &description "Research Assistant at HKUST(GZ)"
@@ -22,7 +22,7 @@ repository               : "wei-hci.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Wei He"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Guangzhou, China"
@@ -31,13 +31,12 @@ author:
   email            : "none@example.org" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
+  
   googlescholar    : "https://scholar.google.com/citations?user=V2x6UVQAAAAJ&hl=en"
   impactstory      : # URL
   orcid            : "http://orcid.org/0009-0001-6745-2752"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
