--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Wei He
 position: M.Phil Student
-affiliation: Hong Kong University of Science and Technology (Guangzhou)
+affiliation: HKUST(GZ)
 email: wei.he1024@gmail.com
 keywords: Wei He
 google_scholar:
