--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Wei He
-position: M.Phil Student
+position: Research Student
 affiliation: HKUST(GZ)
 email: wei.he1024@gmail.com
 keywords: Wei He
