--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ keywords: Wei He
 google_scholar:
 github_link:
 linkedin: 
-avatar: 
+avatar: ./assets/img/avatar.png
 google_analytics: 
-favicon: 
-favicon_dark: 
+favicon: ./assets/img/favicon.png
+favicon_dark: ./assets/img/favicon.png
 description: 
 canonical: https://minimal-light.yyliu.net/
 remote_theme: yaoyao-liu/minimal-light
