--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Wei He
 position: Research Student
 affiliation: HKUST(GZ)
-email: danielweihe@hkust-gz.edu.cn
+email: weih@hkust-gz.edu.cn
 keywords: Wei He
 google_scholar:
 github_link:
