--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Wei He
-position: Research Student
+position: PhD Student
 affiliation: HKUST(GZ)
 email: weih@hkust-gz.edu.cn
 keywords: Wei He
