--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Wei He
 position: PhD Student
 affiliation: HKUST(GZ)
-email: weih@hkust-gz.edu.cn
+email: whe694@connect.hkust-gz.edu.cn
 keywords: Wei He
 google_scholar:
 github_link:
