--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ keywords: Wei He
 google_scholar:
 github_link:
 linkedin: 
-avatar: ./assets/img/avatar.png
+avatar: ./assets/img/avatar.jpg
 google_analytics: 
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon.png
